# vimscape2007.nvim

./: .gitignore  AGENTS.md  LICENSE  LICENSE.md  PLAN.md  README.md  SPEC.md  build.lua
.github/workflows/: ci.yml  release.yml
lua/: config.lua  globals.lua  keys.lua  utils.lua  vimscape.lua  window_config.lua
lua/vimscape2007/: init.lua
notes/: DB_REFACTOR_PLAN.md
notes/plan/: lexer-numeric-prefix-state-machine.md  lexer-numeric-prefix.md
notes/research/: 2025-01-02_lexer_numeric_prefix.md
notes/tickets/: feature_lexer_numeric_prefix.md
vimscape2007/: Cargo.toml  vimscape.db
vimscape2007/src/: api.rs  db.rs  lib.rs  motions.rs  parse_utils.rs  skill_data.rs  skills.rs  token.rs  utils.rs
vimscape_backend/: Cargo.toml  PLAN.md  SPEC.md  build-dev.sh
vimscape_backend/src/: api.rs  db.rs  levels.rs  lexer.rs  lib.rs  parse_utils.rs  parser.rs  skill_data.rs  skills.rs  token.rs  token_log.rs
