[package]
name = "vimscape_backend"
version = "1.1.1"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
nvim-oxi = { version = "0.6.0", features = ["neovim-0-11"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }

[dev-dependencies]
nvim-oxi = { version = "0.6.0", features = ["neovim-0-11", "test"] }
